--- a/login and sign up/app/build.gradle
+++ b/login and sign up/app/build.gradle
@@ -54,4 +54,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
 
     implementation 'com.google.android.material:material:1.1.0'
+
+    implementation "androidx.room:room-runtime:2.2.5"
+    annotationProcessor "androidx.room:room-compiler:2.2.5"
 }
